@@ -37,7 +37,7 @@ public class PlotCommand implements CommandExecutor  {
 		output.add(ChatTools.formatTitle("/plot"));
 		output.add(ChatTools.formatCommand(TownySettings.getLangString("res_sing"), "/plot claim", "",TownySettings.getLangString("msg_block_claim")));
 		output.add(ChatTools.formatCommand(TownySettings.getLangString("res_sing") + "/Mayor", "/plot notforsale", "", TownySettings.getLangString("msg_plot_nfs")));
-		output.add(ChatTools.formatCommand(TownySettings.getLangString("res_sing") + "/Mayor", "/plot forsale", "", TownySettings.getLangString("msg_plot_fs")));
+		output.add(ChatTools.formatCommand(TownySettings.getLangString("res_sing") + "/Mayor", "/plot forsale [$]", "", TownySettings.getLangString("msg_plot_fs")));
 		output.add(TownySettings.getLangString("msg_nfs_abr"));
 	}
 	
@@ -84,13 +84,13 @@ public class PlotCommand implements CommandExecutor  {
 			try {
 				if (split[0].equalsIgnoreCase("claim")) {
 					WorldCoord coord = new WorldCoord(world, Coord.parseCoord(player));
-					residentClaim(resident, new WorldCoord(world, Coord.parseCoord(player)));
+					if (residentClaim(resident, new WorldCoord(world, Coord.parseCoord(player)))) {
+						plugin.sendMsg(player, TownySettings.getLangString("msg_claimed") + " (" + coord + ").");
 
-					plugin.sendMsg(player, TownySettings.getLangString("msg_claimed") + " (" + coord + ").");
-
-					plugin.updateCache(coord);
-					plugin.getTownyUniverse().getDataSource().saveResident(resident);
-					plugin.getTownyUniverse().getDataSource().saveWorld(world);
+						plugin.updateCache(coord);
+						plugin.getTownyUniverse().getDataSource().saveResident(resident);
+						plugin.getTownyUniverse().getDataSource().saveWorld(world);
+					}
 				} else if (split[0].equalsIgnoreCase("unclaim")) {
 					WorldCoord coord = new WorldCoord(world, Coord.parseCoord(player));
 					residentUnclaim(resident, new WorldCoord(world, Coord.parseCoord(player)), false);
@@ -102,10 +102,13 @@ public class PlotCommand implements CommandExecutor  {
 					plugin.getTownyUniverse().getDataSource().saveWorld(world);
 				} else if (split[0].equalsIgnoreCase("notforsale") || split[0].equalsIgnoreCase("nfs")) {
 					WorldCoord worldCoord = new WorldCoord(world, Coord.parseCoord(player));
-					setPlotForSale(resident, worldCoord, false);
+					setPlotForSale(resident, worldCoord, -1);
 				} else if (split[0].equalsIgnoreCase("forsale") || split[0].equalsIgnoreCase("fs")) {
 					WorldCoord worldCoord = new WorldCoord(world, Coord.parseCoord(player));
-					setPlotForSale(resident, worldCoord, true);
+					if (split.length > 1)
+						setPlotForSale(resident, worldCoord, Integer.parseInt(split[1]));
+					else
+						setPlotForSale(resident, worldCoord, worldCoord.getTownBlock().getTown().getPlotPrice());
 				}
 			} catch (TownyException x) {
 				plugin.sendErrorMsg(player, x.getError());
@@ -128,33 +131,35 @@ public class PlotCommand implements CommandExecutor  {
 
 				try {
 					Resident owner = townBlock.getResident();
-					if (townBlock.isForSale()) {
-						if (TownySettings.isUsingIConomy() && !resident.pay(town.getPlotPrice(), owner))
+					if (townBlock.isForSale() != -1) {
+						if (TownySettings.isUsingIConomy() && !resident.pay(townBlock.isForSale(), owner))
 							throw new TownyException(TownySettings.getLangString("msg_no_money_purchase_plot"));
 						if (resident.getTownBlocks().size() + 1 > TownySettings.getMaxPlotsPerResident())
 							throw new TownyException(String.format(TownySettings.getLangString("msg_no_money_purchase_plot"), TownySettings.getMaxPlotsPerResident()));
+						
+						plugin.getTownyUniverse().sendTownMessage(town, TownySettings.getBuyResidentPlotMsg(resident.getName(), owner.getName(), townBlock.isForSale()));
+						townBlock.setForSale(-1);
 						townBlock.setResident(resident);
-						townBlock.setForSale(false);
 						plugin.getTownyUniverse().getDataSource().saveResident(owner);
-						plugin.getTownyUniverse().sendTownMessage(town, TownySettings.getBuyResidentPlotMsg(resident.getName(), owner.getName()));
 						return true;
 					} else if (town.isMayor(resident) || town.hasAssistant(resident)) {
 						if (TownySettings.isUsingIConomy() && !town.pay(town.getPlotPrice(), owner))
 							throw new TownyException(TownySettings.getLangString("msg_town_no_money_purchase_plot"));
+						
+						plugin.getTownyUniverse().sendTownMessage(town, TownySettings.getBuyResidentPlotMsg(town.getName(), owner.getName(), town.getPlotPrice()));
 						townBlock.setResident(null);
-						townBlock.setForSale(false);
-						plugin.getTownyUniverse().sendTownMessage(town, TownySettings.getBuyResidentPlotMsg(town.getName(), owner.getName()));
+						townBlock.setForSale(-1);
 						return true;
 					} else
 						throw new AlreadyRegisteredException(String.format(TownySettings.getLangString("msg_already_claimed"), owner.getName()));
 				} catch (NotRegisteredException e) {
-					if (!townBlock.isForSale())
+					if (townBlock.isForSale() == -1)
 						throw new TownyException(TownySettings.getLangString("msg_err_plot_nfs"));
 					
 					if (TownySettings.isUsingIConomy() && !resident.pay(town.getPlotPrice(), town))
 						throw new TownyException(TownySettings.getLangString("msg_no_money_purchase_plot"));
-
-					townBlock.setForSale(false);
+					
+					townBlock.setForSale(-1);
 					townBlock.setResident(resident);
 					return true;
 				}
@@ -174,7 +179,7 @@ public class PlotCommand implements CommandExecutor  {
 			Resident owner = townBlock.getResident();
 			if (resident == owner || force) {
 				townBlock.setResident(null);
-				townBlock.setForSale(true);
+				townBlock.setForSale(townBlock.getTown().getPlotPrice());
 				plugin.getTownyUniverse().getDataSource().saveResident(resident);
 				return true;
 			} else
@@ -184,7 +189,7 @@ public class PlotCommand implements CommandExecutor  {
 		}
 	}
 	
-	public void setPlotForSale(Resident resident, WorldCoord worldCoord, boolean forSale) throws TownyException {
+	public void setPlotForSale(Resident resident, WorldCoord worldCoord, int forSale) throws TownyException {
 		if (resident.hasTown())
 			try {
 				TownBlock townBlock = worldCoord.getTownBlock();
@@ -203,7 +208,7 @@ public class PlotCommand implements CommandExecutor  {
 					} catch (NotRegisteredException e) {
 						throw new TownyException(TownySettings.getLangString("msg_not_own_area"));
 					}
-				if (forSale)
+				if (forSale != -1)
 					plugin.getTownyUniverse().sendTownMessage(town, TownySettings.getPlotForSaleMsg(resident.getName(), worldCoord));
 				else
 					plugin.getTownyUniverse().getPlayer(resident).sendMessage(TownySettings.getLangString("msg_err_plot_nfs"));
