@@ -303,7 +303,12 @@ public class Town extends TownBlockOwner implements Walled, ResidentList {
 	private void remove(Resident resident) {
 		for (TownBlock townBlock : new ArrayList<TownBlock>(resident.getTownBlocks())) {
 			townBlock.setResident(null);
-			townBlock.setForSale(true);
+			try {
+				townBlock.setForSale(townBlock.getTown().getPlotPrice());
+			} catch (NotRegisteredException e) {
+				// TODO Auto-generated catch block
+				e.printStackTrace();
+			}
 			getPlugin().getTownyUniverse().getDataSource().saveResident(resident); //TODO: BAD!
 		}
 		
