@@ -135,7 +135,7 @@ msg_plot_fs: 'Put this area up for auction.'
 
 for_sale: '[For Sale: %s]'
 
-msg_buy_resident_plot: '&b%s bought %s''s plot!'
+msg_buy_resident_plot: '&b%s bought %s''s plot for %s!'
 msg_couldnt_pay_taxes: '&b%s couldn''t pay taxes and was kicked from the %s.'
 msg_couldnt_pay_plot_taxes: '&b%s couldn''t pay taxes and lost ownership over a plot.'
 msg_payed_town_tax: '&bPayed town tax of '
